2007-04-17  Mark McLoughlin  <markmc@redhat.com>

	* virt-install: add two new options to virt-install:
	  --nodisks - if creating a VM to run a livecd or a prebuilt
	  system image, it is not neccessary to create another disk
	  for the VM
	  --installer - this option allows the user to choose the
	  installer type
	
2007-04-17  Mark McLoughlin  <markmc@redhat.com>

	Not all installer types need the VM to be executed twice
	- i.e. the "install" phase may not need the VM to be run,
	and we only start the VM post-install.

	* virtinst/Guest.py: allow get_config_xml(install=True)
	to return None, causing the first VM run to be skipped.
	
2007-04-17  Mark McLoughlin  <markmc@redhat.com>

	* virt-install: clean up the two similar "start guest,
	check to see if it succeeded" code paths into a single code
	path.
	
2007-04-17  Mark McLoughlin  <markmc@redhat.com>

	* virt-install, virtinst/DistroManager.py, virtinst/Guest.py:
	The existing heuristic we use in virt-install to detect whether
	an install has completed successfully is dependant on the type
	of installer being used - i.e. if you create a VM with a livecd
	or a raw ext3 image, there may be no disk with an MBR at the end.
	Move the post-install logic into a new DistroInstaller method.
	
2007-04-17  Mark McLoughlin  <markmc@redhat.com>

	* virtinst/Guest.py: introduce a new Installer class which
	encapsulates the notion of how to install a guest, the
	idea being that we can install a guest using e.g. a distro
	installer, livecd or pre-built image.

	* virtinst/FullVirtGuest.py, virtinst/ParaVirtGuest.py:
	re-factor out the prepare_install_location() and get_config_xml()
	stuff and chain up to the installer for it

	* virtinst/DistroManager.py: add DistroInstaller which
	knows how to install using a distro iso or install tree

	* virtinst/__init__.py: expose DistroManager

	* tests/xmlconfig.py: update to use installer

2007-04-15  "Daniel P. Berrange  <berrange@redhat.com>
